tests/errors/type_mismatch_less_equal.dang
# Test less than or equal comparison type mismatch
let result = "hello" <= 42
